tm/tests/snapshots/emit_planner__plan_home_day_emit.snap
---
source: tm/tests/emit_planner.rs
expression: "rendered(&day, &fx.tree, &fx.cfg, 9, 0)"
---
<!-- tm:plan start 09:00 -->
07:30  ·    ✓ breakfast 30m                         (30m)
09:00  1 p0 ⚠ Pick up package                   20m     due today
09:20  3 p3   Claude Code drafts tests     @m2  1b
10:20  3 p5   Pick winter courses          @O3  2b
11:30  ·      lunch 30m
12:00  3 p5   Pick winter courses          @O3  2b
12:50  ⏰     Meeting w/ host                   1h
13:50  3 p5   Pick winter courses          @O3  2b
14:50  ·      break 20m
15:10  3 p5   Insurance claim for the bi…       30m
16:00  ·      workout 1h
17:00  2 p5   Call the bank about the ca…       20m
17:30  ·      dinner 30m
18:00  ───    window ends 18:00
18:00  ·      groceries 45m
18:45  ·      laundry 30m
19:15  ○      Severance S3E4                    1h
21:30  🌙     wind-down · bed 22:00
22:00  ·      sleep 8h30m
<!-- tm:plan end -->

svg
  <defs>: yes
  class="plan": yes
  id="tm-lost": yes
  class="cursor": yes
  breakfast · 30m · ci1
  Pick up package · 20m · ci1 · p0
  Claude Code drafts tests · 1h · ci3 · p3 · @O2
  Pick winter courses · 1h · ci2 · p5 · @O3
  lunch · 30m · ci1 · p0
  Pick winter courses · 50m · ci2 · p5 · @O3
  Meeting w/ host · 1h · ci3 · p0
  Pick winter courses · 1h · ci2 · p5 · @O3
  break · 20m
  Insurance claim for the bike · 50m · ci2 · p5
  workout · 1h · ci1 · p0
  Call the bank about the card · 30m · ci2 · p5
  dinner · 30m · ci1 · p0
  groceries · 45m · ci1 · p5
  laundry · 30m · ci1 · p5
  Severance S3E4 · 1h · ci0 · p5
  wind-down · 30m
  sleep · 2h · ci0 · p5
